<resources>
    <string name="app_name">My Application</string>
    <string name="app_in_name">ROSOBORONEXPORT</string>
    <string name="app_in_name_after">roe.ru</string>
    <string name="btnSingIn">Войти</string>
    <string name="btnRegister">Зарегистрироваться</string>
    <string name="text_buttom">Войдите в учетную запись</string>
    <string name="cart">Расход картриджа:</string>
    <string name="cart_model">Расход картриджей:</string>
    <string name="cart_now">Текущее состояние картриджа:</string>
</resources>
