<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tank102"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:textSize="35sp"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/app_in_name" />

        <TextView
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:text="@string/app_in_name_after"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/text_buttom"
        android:textColor="@color/text_buttom"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_above="@id/text_bottom"
        android:layout_margin="15dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sign_in"
            android:fontFamily="@font/montserrat"
            android:text="@string/btnSingIn"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_register"
            android:fontFamily="@font/montserrat"
            android:text="@string/btnRegister"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>